<resources>
    <string name="app_name">Story App Dicoding</string>
    <string name="image">image</string>
    <string name="name">Name</string>
    <string name="image_description">Picture of %1$s</string>
    <string name="date">Date</string>
    <string name="created_at">Uploaded at %1$s</string>
    <string name="s">S</string>
    <string name="detail_story">Detail Story</string>
    <string name="enter_password">Enter Password</string>
    <string name="must_not_empty">Must Not Empty</string>
    <string name="more_than_character">More Than Character</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome %1$s</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Dont have account?</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="already_have_account">Already have account?</string>
    <string name="add_story">Adding a story</string>
    <string name="txt_add_story">Tambah Story</string>
    <string name="txt_galery">Galeri</string>
    <string name="txt_camera">Kamera</string>
    <string name="txt_desc_image">Masukkan Deskripsi Gambar</string>
    <string name="txt_upload">Upload</string>
    <string name="txt_image_preview">Tampilan Gambar</string>
    <string name="txt_info">info</string>
    <string name="txt_headline">judul</string>
    <string name="txt_desc">deskripsi</string>
    <string name="txt_close">Keluar</string>
    <string name="txt_image">Gambar</string>
    <string name="doesnt_get_permission">Doesn\'t Get Permission</string>
    <string name="permission_denied">Permission not granted</string>
    <string name="choose_photo_first">Choose Photo First\\</string>
    <string name="logout">LOg Out</string>
    <string name="change_language">Change Language</string>
    <string name="retry">Retry</string>
    <string name="enter_email">Enter Email</string>
    <string name="not_type_email">Wrong Email Format (@)</string>
    <string name="title_activity_maps">Maps Activity</string>
    <string name="normal_type">Normal Type\n</string>
    <string name="satellite_type">Satelite\n</string>
    <string name="terrain_type">Terain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="marker_in">Marker in %1$s</string>
    <string name="app_widget_description">Widget Description\n</string>
    <string name="title_activity_user_maps">Maps</string>
    <string name="appwidget_text">Story App Dicoding\n</string>
    <string name="empty_text">No Data</string>
    <string name="nightmode">modeswift\n</string>
    <string name="profile">Profile\n</string>
    <string name="ina">Syabina Nur Pajriyanti\n</string>
    <string name="inamail">sybninanf26@gmail.com</string>
    <string name="title_activity_maps2">MapsActivity2</string>
</resources>