<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/location"
        android:title="@string/title_activity_user_maps"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_my_location_24"/>

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_account_circle_24"/>
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_logout_24"/>




<!--    <item-->
<!--        android:id="@+id/mode_swift"-->
<!--        android:title="@string/nightmode"-->
<!--        app:showAsAction="never"-->
<!--        android:theme="@style/AppTheme.SwiftMode" />-->


</menu>