<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="20dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        app:cardElevation="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:backgroundTint="@android:color/darker_gray">

        <TextView
            android:id="@+id/tvfirstletter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:text="@string/s" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/card_view"
        app:layout_constraintStart_toEndOf="@+id/card_view"
        app:layout_constraintTop_toTopOf="@+id/card_view"
        tools:text="@string/name" />

    <ImageView
        android:id="@+id/img_stories"
        android:layout_width="417dp"
        android:layout_height="273dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvcreated"
        android:layout_width="178dp"
        android:layout_height="20dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_stories"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/date" />

</androidx.constraintlayout.widget.ConstraintLayout>